--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<meta name="author" content="Sojka Tomasz" />
+		<meta
+			name="keywords"
+			content="
+		Wycieczki, podróże, biuro podróży, odkrywanie, eksploracja, wakacje, destynacje, atrakcje turystyczne, rejsy, przewodnicy turystyczni, pakiety turystyczne, wyprawy przygodowe, kultura i sztuka, historia, plaże i relaks, góry i trekking, safari, podwodny świat, gastronomia, luksusowe podróże."
+		/>
+		<meta
+			name="description"
+			content="Biuro turystyczne oferujące wycieczki i podróże, zapewniające niezapomniane doświadczenia odkrywania nowych miejsc, eksploracji różnorodnych destynacji oraz relaksu na wymarzonych wakacjach. Nasi przewodnicy turystyczni pomogą Ci odkryć atrakcje turystyczne, a nasze pakiety turystyczne zapewnią wyjątkowe wyprawy przygodowe"
+		/>
+		<title>Biuro turystyczne Tropical Paradise</title>
 		<script
 			src="https://kit.fontawesome.com/f5a70fd252.js"
 			crossorigin="anonymous"
 		></script>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+		/>
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
-		<!-- NAV -->
 		<nav class="nav">
 			<button class="nav-btn">
 				<div class="nav-btn__box">
@@ -34,9 +48,8 @@
 				>
 			</div>
 		</nav>
-		<!-- HEADER -->
 		<header class="header section">
-			<h1 class="header__h1">Travel Paradise</h1>
+			<h1 class="header__h1">Tropical Paradise</h1>
 
 			<p class="header__text">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, ullam.
@@ -45,9 +58,7 @@
 			<a href="#offer" class="header__btn btn-animation">poznaj ofertę</a>
 			<div class="decoration decoration__left-bottom"></div>
 		</header>
-		<!-- MAIN -->
 		<main class="main">
-			<!-- COUNTRIES -->
 			<section class="countries section-padding section white-section">
 				<div class="wrapper">
 					<h2 class="section-h2">Spełniaj Marzenia</h2>
@@ -55,7 +66,7 @@
 						<div class="countries__box-img">
 							<img
 								src="./img/beautiful-640.jpg"
-								alt=""
+								alt="Na krystalicznie czystej wodzie unosząca się łódka odkrywa malowniczą wyspę z zielonymi palmami"
 								class="countries__img"
 							/>
 						</div>
@@ -72,7 +83,7 @@
 						<div class="countries__box-img countries__box-img--right">
 							<img
 								src="./img/hallstatt-640.jpg"
-								alt=""
+								alt="Misteczko Hallstatt unosi się nad brzegiem błyszczącego jeziora, otoczone górami, które odbijają się w spokojnej wodzie."
 								class="countries__img"
 							/>
 						</div>
@@ -89,7 +100,7 @@
 						<div class="countries__box-img">
 							<img
 								src="./img/bora-bora-640.jpg"
-								alt=""
+								alt="Na urokliwej wyspie Bora Bora, wznoszą się malownicze drewniane domki z dachami ze słomy, harmonijnie wpisane w piękno otaczającego krajobrazu. W tle majestatyczna góra, jej szczyt zakryty przez kłęby chmur, dodaje magii i tajemniczości temu malunkowi przyrody."
 								class="countries__img"
 							/>
 						</div>
@@ -105,18 +116,14 @@
 					</div>
 				</div>
 			</section>
-			<!-- IMG -->
 			<section class="img section">
 				<h2 class="img__h2">Podróże po Tropikalnym Raju</h2>
-				<hr />
 				<p class="img_p">
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quam.
 				</p>
-				<hr />
 				<div class="decoration decoration__left-bottom"></div>
 				<div class="decoration decoration__right-top"></div>
 			</section>
-			<!-- countries -->
 			<section
 				class="countries section-padding section white-section"
 				id="countries"
@@ -140,8 +147,11 @@
 									<li class="countries__card-list-item">Piękne plaże</li>
 									<li class="countries__card-list-item">Smakowanie kuchni</li>
 								</ul>
-								<button class="countries__card-info-btn btn-animation">
-									Wybierz
+								<button
+									href="#italy"
+									class="countries__card-info-btn btn-animation"
+								>
+									<a href="#italy">Czytaj więcej</a>
 								</button>
 							</div>
 						</div>
@@ -161,8 +171,11 @@
 									<li class="countries__card-list-item">Piękne plaże</li>
 									<li class="countries__card-list-item">Smakowanie kuchni</li>
 								</ul>
-								<button class="countries__card-info-btn btn-animation">
-									Wybierz
+								<button
+									href="#janeiro"
+									class="countries__card-info-btn btn-animation"
+								>
+									<a href="#janeiro">Czytaj więcej</a>
 								</button>
 							</div>
 						</div>
@@ -183,14 +196,258 @@
 									<li class="countries__card-list-item">Smakowanie kuchni</li>
 								</ul>
 								<button class="countries__card-info-btn btn-animation">
-									Wybierz
+									<a href="#zakynthos">Czytaj więcej</a>
 								</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
+			<section class="offer section-padding section" id="offer">
+				<div class="decoration decoration__left-bottom"></div>
+				<div class="decoration decoration__right-top"></div>
+				<div class="wrapper">
+					<div class="offer__box">
+						<h2 class="section-h2">Oferta</h2>
+
+						<div id="italy" class="offer__option">
+							<img
+								src="./img/houses-640.jpg"
+								alt=""
+								class="offer__option-img"
+							/>
+							<div class="offer__option-info">
+								<h3 class="offer__option-h3">Włochy</h3>
+								<p class="offer__option-text">
+									Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+									ducimus illo reprehenderit repellat ullam ex reiciendis
+									dolorem dolorum fugit esse.
+									<br />
+									<br />
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Similique, eligendi.
+								</p>
+								<button class="offer__option-btn btn-animation">Wybierz</button>
+							</div>
+						</div>
+
+						<div id="janeiro" class="offer__option">
+							<img
+								src="./img/rio-de-janeiro-640.jpg"
+								alt=""
+								class="offer__option-img offer__option-img--right"
+							/>
+							<div class="offer__option-info offer__option-info--right">
+								<h3 class="offer__option-h3">Rio De Janeiro</h3>
+								<p class="offer__option-text">
+									Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+									ducimus illo reprehenderit repellat ullam ex reiciendis
+									dolorem dolorum fugit esse.
+									<br />
+									<br />
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Similique, eligendi.
+								</p>
+								<button class="offer__option-btn btn-animation">Wybierz</button>
+							</div>
+						</div>
+						<div id="zakynthos" class="offer__option">
+							<img
+								src="./img/zakynthos-640.jpg"
+								alt=""
+								class="offer__option-img"
+							/>
+							<div class="offer__option-info">
+								<h3 class="offer__option-h3">Zakynthos</h3>
+								<p class="offer__option-text">
+									Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+									ducimus illo reprehenderit repellat ullam ex reiciendis
+									dolorem dolorum fugit esse.
+									<br />
+									<br />
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Similique, eligendi.
+								</p>
+								<button class="offer__option-btn btn-animation">Wybierz</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section
+				id="reviews"
+				class="reviews section-padding section white-section"
+			>
+				<div class="wrapper">
+					<h2 class="section-h2">Opinie</h2>
+					<div class="reviews__boxes">
+						<div class="reviews__box">
+							<div class="reviews__box-img">
+								<img src="./img/person1.jpg" alt="Weronika Kamińska" />
+							</div>
+							<div class="reviews__box-quote">
+								<i class="fa-solid fa-quote-right"></i>
+							</div>
+							<p class="reviews__box-text">
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Expedita odit at quod in dolorum, ea aliquam cum quos saepe,
+								eum, et iusto accusamus rerum ipsum aut provident
+								exercitationem. Aliquam, magni. Lorem ipsum dolor sit amet.
+							</p>
+							<p class="reviews__box-person">Weronika Kamińska</p>
+						</div>
+						<div class="reviews__box">
+							<div class="reviews__box-img">
+								<img src="./img/person2.jpg" alt="Anna Kowalska" />
+							</div>
+							<div class="reviews__box-quote">
+								<i class="fa-solid fa-quote-right"></i>
+							</div>
+							<p class="reviews__box-text">
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Expedita odit at quod in dolorum, ea aliquam cum quos saepe,
+								eum, et iusto accusamus rerum ipsum aut provident
+								exercitationem. Aliquam, magni. Lorem ipsum dolor sit amet.
+							</p>
+							<p class="reviews__box-person">Anna Kowalska</p>
+						</div>
+						<div class="reviews__box">
+							<div class="reviews__box-img">
+								<img src="./img/person3.jpg" alt="Alex Wiśniowski" />
+							</div>
+							<div class="reviews__box-quote">
+								<i class="fa-solid fa-quote-right"></i>
+							</div>
+							<p class="reviews__box-text">
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Expedita odit at quod in dolorum, ea aliquam cum quos saepe,
+								eum, et iusto accusamus rerum ipsum aut provident
+								exercitationem. Aliquam, magni. Lorem ipsum dolor sit amet.
+							</p>
+							<p class="reviews__box-person">Alex Wiśniowski</p>
+						</div>
+						<div class="reviews__box">
+							<div class="reviews__box-img">
+								<img src="./img/person4.jpg" alt="Anna Kowalska" />
+							</div>
+							<div class="reviews__box-quote">
+								<i class="fa-solid fa-quote-right"></i>
+							</div>
+							<p class="reviews__box-text">
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Expedita odit at quod in dolorum, ea aliquam cum quos saepe,
+								eum, et iusto accusamus rerum ipsum aut provident
+								exercitationem. Aliquam, magni. Lorem ipsum dolor sit amet.
+							</p>
+							<p class="reviews__box-person">Anna Kowalska</p>
+						</div>
+						<div class="reviews__box">
+							<div class="reviews__box-img">
+								<img src="./img/person5.jpg" alt="Jan Nowak" />
+							</div>
+							<div class="reviews__box-quote">
+								<i class="fa-solid fa-quote-right"></i>
+							</div>
+							<p class="reviews__box-text">
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Expedita odit at quod in dolorum, ea aliquam cum quos saepe,
+								eum, et iusto accusamus rerum ipsum aut provident
+								exercitationem. Aliquam, magni. Lorem ipsum dolor sit amet.
+							</p>
+							<p class="reviews__box-person">Jan Nowak</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section
+				id="contact"
+				class="contact section-padding section white-section"
+			>
+				<div class="decoration decoration__left-bottom"></div>
+				<div class="decoration decoration__right-top"></div>
+				<div class="wrapper">
+					<h2 class="section-h2">Kontakt</h2>
+					<form class="contact__form">
+						<lebel for="name" class="contact__form-lebel"
+							>Imię i Nazwisko:</lebel
+						>
+						<input type="text" class="contact__form-input" id="name" />
+						<lebel for="email" class="contact__form-lebel">Adres e-mail:</lebel>
+						<input type="text" class="contact__form-input" id="email" />
+						<lebel for="message" class="contact__form-lebel">Wiadomość:</lebel>
+						<textarea
+							name=""
+							id="message"
+							class="contact__form-textarea"
+						></textarea>
+						<button type="submit" class="contact__form-btn btn-animation">
+							Wyślij
+						</button>
+					</form>
+				</div>
+			</section>
 		</main>
+		<footer class="footer section white-section">
+			<div class="wrapper">
+				<div class="footer__box">
+					<div class="footer__box-company">
+						<h3 class="footer__box-h3 footer__box-h3--logo">
+							Tropical Paradise
+						</h3>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius,
+							fugit quia? Provident, placeat ducimus obcaecati quas, cum
+							voluptate dolor quisquam nihil laudantium maiores expedita minus
+							autem sapiente impedit quasi optio.
+						</p>
+						<a href="#"><i class="fa-brands fa-linkedin"></i></a>
+						<a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+						<a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+					</div>
+					<div class="footer__box-offer">
+						<h3 class="footer__box-h3">Oferta</h3>
+						<ul class="footer__box-list">
+							<li class="footer__box-list-items">
+								<a href="#italy">Włochy</a>
+							</li>
+							<li class="footer__box-list-items">
+								<a href="#janeiro">Rio De Janeiro</a>
+							</li>
+							<li class="footer__box-list-items">
+								<a href="#zakynthos">Zakynthos</a>
+							</li>
+							<li class="footer__box-list-items"><a href="#">Pozostałe</a></li>
+						</ul>
+					</div>
+					<div class="footer__box-about-us">
+						<h3 class="footer__box-h3">Firma</h3>
+						<ul class="footer__box-list">
+							<li class="footer__box-list-items"><a href="#">O nasy</a></li>
+							<li class="footer__box-list-items"><a href="#">Zarząd</a></li>
+							<li class="footer__box-list-items"><a href="#">Zespół</a></li>
+							<li class="footer__box-list-items"><a href="#">Kariera</a></li>
+						</ul>
+					</div>
+				</div>
+				<hr />
+				<p class="footer__bottom-text">
+					&copy; <span class="footer__year"></span>Tropical Paradise
+				</p>
+			</div>
+		</footer>
+		<script
+			type="text/javascript"
+			src="//code.jquery.com/jquery-1.11.0.min.js"
+		></script>
+		<script
+			type="text/javascript"
+			src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+		></script>
+		<script
+			type="text/javascript"
+			src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+		></script>
+		<script src="./js/slick.js"></script>
 		<script src="./js/script.js"></script>
 	</body>
 </html>
